Fixed the jumping color bar.

--- a/static/stylesheets/site.less
+++ b/static/stylesheets/site.less
@@ -42,6 +42,7 @@ body {
     }
 
     > a {
+      position: relative;
       display: block;
       width: 100%;
       height: 100%;
@@ -56,6 +57,8 @@ body {
     }
 
     &.active > a:before {
+      position: absolute;
+      left: 0;
       content: '✓';
       width: 100%;
       height: 100%;
